player-bar: realign the "stop" icon

--- a/src/components/player-bar/style.css
+++ b/src/components/player-bar/style.css
@@ -48,6 +48,10 @@
   padding: 5px 0 6px 2px;
   width: 60px;
 }
+.playButton.isPlaying {
+  padding-left: 0;
+  padding-top: 6px;
+}
 
 .volumeControls {
   align-items: center;
